--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-data": "~4.7.1",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
+    "ember-modal-dialog": "^4.0.1",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
